feat(api entryPoints): CRUD methods implement
